--- a/Gui-Vln-2016/editcomputer.ui
+++ b/Gui-Vln-2016/editcomputer.ui
@@ -13,57 +13,109 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButtonUpdateComputer">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>310</y>
+     <x>110</x>
+     <y>230</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Update</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="lineEditName">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>50</y>
+     <width>371</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditType">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>110</y>
+     <width>371</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditYOB">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>111</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditWB">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>180</y>
+     <width>121</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelName">
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>50</y>
-     <width>113</width>
-     <height>21</height>
+     <y>20</y>
+     <width>361</width>
+     <height>16</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>50</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
+   <property name="text">
+    <string>Name</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
+  <widget class="QLabel" name="labelType">
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>110</y>
-     <width>113</width>
-     <height>21</height>
+     <y>80</y>
+     <width>351</width>
+     <height>16</height>
     </rect>
    </property>
+   <property name="text">
+    <string>Type</string>
+   </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QLabel" name="labelYOB">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>110</y>
-     <width>113</width>
-     <height>21</height>
+     <x>30</x>
+     <y>150</y>
+     <width>91</width>
+     <height>16</height>
     </rect>
+   </property>
+   <property name="text">
+    <string>Year of build</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelWB">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>140</y>
+     <width>60</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Was built</string>
    </property>
   </widget>
  </widget>
